--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-insert": "^0.5.0",
     "gulp-uglify": "^2.1.2",
+    "gulp-rename": "^1.2.2",
     "run-sequence": "^1.2.2",
     "webpack": "^2.4.1"
   },
